force-app/main/default/objects/Partida_Cotizacion__c/Partida_Cotizacion__c.object-meta.xml
<CustomObject>
    <label>Partida de Cotizacion</label>
    <nameField>
        <displayFormat>PC-{00000}</displayFormat>
        <label>Numero de Partida</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partidas de Cotizacion</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>