force-app/main/default/objects/Partida_Cotizacion__c/fields/Cantidad__c.field-meta.xml
<CustomField>
    <fullName>Cantidad__c</fullName>
    <label>Cantidad</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>