force-app/main/default/objects/Partida_Cotizacion__c/fields/Cantidad_Entregada__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Entregada__c</fullName>
    <label>Cantidad Entregada</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
</CustomField>