force-app/main/default/objects/Partida_Cotizacion__c/fields/Cantidad_Pendiente__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Pendiente__c</fullName>
    <label>Cantidad Pendiente</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
    <formula>Cantidad__c - Cantidad_Entregada__c</formula>
</CustomField>