force-app/main/default/objects/Partida_Cotizacion__c/fields/Costo_Total_Linea__c.field-meta.xml
<CustomField>
    <fullName>Costo_Total_Linea__c</fullName>
    <label>Costo Total de Linea</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <formula>Cantidad__c * Costo_Unitario__c</formula>
</CustomField>