force-app/main/default/objects/Partida_Cotizacion__c/fields/Cotizacion__c.field-meta.xml
<CustomField>
    <fullName>Cotizacion__c</fullName>
    <label>Cotizacion</label>
    <type>MasterDetail</type>
    <referenceTo>Cotizacion__c</referenceTo>
    <relationshipLabel>Partidas de Cotizacion</relationshipLabel>
    <relationshipName>Partidas_Cotizacion</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>