force-app/main/default/objects/Partida_Cotizacion__c/fields/Entrega_Completa__c.field-meta.xml
<CustomField>
    <fullName>Entrega_Completa__c</fullName>
    <label>Entrega Completa</label>
    <type>Checkbox</type>
    <formula>Cantidad_Entregada__c &gt;= Cantidad__c</formula>
</CustomField>