force-app/main/default/objects/Partida_Cotizacion__c/fields/Estatus_Proveedor__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Proveedor__c</fullName>
    <label>Estatus del Proveedor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pendiente</fullName><default>true</default><label>Pendiente</label></value>
            <value><fullName>Cotizado</fullName><default>false</default><label>Cotizado</label></value>
            <value><fullName>Confirmado</fullName><default>false</default><label>Confirmado</label></value>
            <value><fullName>En Transito</fullName><default>false</default><label>En Transito</label></value>
            <value><fullName>Recibido</fullName><default>false</default><label>Recibido</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>