force-app/main/default/objects/Partida_Cotizacion__c/fields/Margen_Porcentaje__c.field-meta.xml
<CustomField>
    <fullName>Margen_Porcentaje__c</fullName>
    <label>Margen %</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <formula>IF(Costo_Unitario__c &gt; 0, (Precio_Unitario__c - Costo_Unitario__c) / Costo_Unitario__c, 0)</formula>
</CustomField>