force-app/main/default/objects/Partida_Cotizacion__c/fields/Precio_Unitario__c.field-meta.xml
<CustomField>
    <fullName>Precio_Unitario__c</fullName>
    <label>Precio Unitario</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>4</scale>
    <required>true</required>
</CustomField>