force-app/main/default/objects/Partida_Cotizacion__c/fields/Proveedor__c.field-meta.xml
<CustomField>
    <fullName>Proveedor__c</fullName>
    <label>Proveedor</label>
    <type>Lookup</type>
    <referenceTo>Proveedor__c</referenceTo>
    <relationshipLabel>Partidas de Cotizacion</relationshipLabel>
    <relationshipName>Partidas_Cotizacion</relationshipName>
</CustomField>