force-app/main/default/objects/Partida_Cotizacion__c/fields/Total_Linea__c.field-meta.xml
<CustomField>
    <fullName>Total_Linea__c</fullName>
    <label>Total de Linea</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <formula>Cantidad__c * Precio_Unitario__c</formula>
</CustomField>