force-app/main/default/objects/Partida_Cotizacion__c/fields/Unidad__c.field-meta.xml
<CustomField>
    <fullName>Unidad__c</fullName>
    <label>Unidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pieza</fullName><default>true</default><label>Pieza</label></value>
            <value><fullName>Litro</fullName><default>false</default><label>Litro</label></value>
            <value><fullName>Kilo</fullName><default>false</default><label>Kilo</label></value>
            <value><fullName>Metro</fullName><default>false</default><label>Metro</label></value>
            <value><fullName>Servicio</fullName><default>false</default><label>Servicio</label></value>
            <value><fullName>Otro</fullName><default>false</default><label>Otro</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>