force-app/main/default/objects/Partida_Cotizacion__c/validationRules/Cantidad_Mayor_Cero.validationRule-meta.xml
<ValidationRule>
    <fullName>Cantidad_Mayor_Cero</fullName>
    <active>true</active>
    <errorConditionFormula>Cantidad__c &lt;= 0</errorConditionFormula>
    <errorMessage>La cantidad debe ser mayor a cero.</errorMessage>
</ValidationRule>