force-app/main/default/objects/Partida_Cotizacion__c/validationRules/Precio_Mayor_Cero.validationRule-meta.xml
<ValidationRule>
    <fullName>Precio_Mayor_Cero</fullName>
    <active>true</active>
    <errorConditionFormula>Precio_Unitario__c &lt;= 0</errorConditionFormula>
    <errorMessage>El precio unitario debe ser mayor a cero.</errorMessage>
</ValidationRule>